--- a/FlightReservationBot/FlightReservationBot/FlightReservationBot.csproj
+++ b/FlightReservationBot/FlightReservationBot/FlightReservationBot.csproj
@@ -113,10 +113,13 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
+    <Compile Include="Dialogs\FlightReservationDialog.cs" />
+    <Compile Include="Dialogs\GreetingDialog.cs" />
     <Compile Include="Dialogs\RootDialog.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\FlightReservation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
