--- a/FlightReservationBot/FlightReservationBot/FlightReservationBot.csproj
+++ b/FlightReservationBot/FlightReservationBot/FlightReservationBot.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\Utility.cs" />
     <Compile Include="Models\FlightReservation.cs" />
     <Compile Include="Models\Place.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
