Added publish profile

--- a/FlightReservationBot/FlightReservationBot/Web.config
+++ b/FlightReservationBot/FlightReservationBot/Web.config
@@ -7,8 +7,8 @@
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
     <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="a4ff12f3-e20b-4f4a-9a73-d7630a27031d" />
-    <add key="MicrosoftAppPassword" value="Fp76knY5E7m0WwYtPYVsXGM" />
+    <add key="MicrosoftAppId" value="905034cd-d8fd-435f-8cee-25b79770443c" />
+    <add key="MicrosoftAppPassword" value="FNM4KPoOgatT6KhE87ZB8ob" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
