--- a/FlightReservationBot/FlightReservationBot/FlightReservationBot.csproj
+++ b/FlightReservationBot/FlightReservationBot/FlightReservationBot.csproj
@@ -128,6 +128,7 @@
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Properties\PublishProfiles\FlightReservationBotDemo - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
